--- a/index.html
+++ b/index.html
@@ -3,68 +3,136 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>Dr. Eleanor Gaye
-Awesome Science faculty
-University of Awesome
-Bobtown, CA 99999,
-USA
-Tel: 123-456-7890
-Email: no_reply@example.com
 
-20 January 2016
+  <body>
 
-Miss Eileen Dover
-4321 Cliff Top Edge
-Dover, CT9 XXX
-UK
+    <!-- 送り主情報（右寄せ） -->
+    <address class="sender-column">
+      Dr. Eleanor Gaye<br>
+      Awesome Science faculty<br>
+      University of Awesome<br>
+      Bobtown, CA 99999, USA<br>
+      Tel: 123-456-7890<br>
+      Email: no_reply@example.com
+    </address>
 
+    <!-- 日付 -->
+    <p class="date">20 January 2016</p>
 
-Re: Eileen Dover university application
+    <!-- 相手の住所 -->
+    <address>
+      Miss Eileen Dover<br>
+      4321 Cliff Top Edge<br>
+      Dover, CT9 XXX<br>
+      UK
+    </address>
 
-Dear Eileen,
+    <h1>Re: Eileen Dover university application</h1>
 
-Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.
+    <p>Dear Eileen,</p>
 
-Starting dates
+    <p>
+      Thank you for your recent application to join us at the University of
+      Awesome's science faculty to study as part of your PhD next year. I will
+      answer your questions one by one, in the following sections.
+    </p>
 
-We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:
+    <h2>Starting dates</h2>
 
-First semester: 9 September 2016
-Second semester: 15 January 2017
-Third semester: 2 May 2017
+    <p>
+      We are happy to accommodate you starting your study with us at any time,
+      however it would suit us better if you could start at the beginning of a
+      semester; the start dates for each one are as follows:
+    </p>
 
-Please let me know if this is ok, and if so which start date you would prefer.
+    <ul>
+      <li>First semester: 9 September 2016</li>
+      <li>Second semester: 15 January 2017</li>
+      <li>Third semester: 2 May 2017</li>
+    </ul>
 
-You can find more information about important university dates on our website.
+    <p>Please let me know which start date you prefer.</p>
 
+    <p>
+      You can find more information about important university dates on our
+      <a href="#">website</a>.
+    </p>
 
-Subjects of study
+    <h2>Subjects of study</h2>
 
-At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:
+    <p>
+      At the Awesome Science Faculty, we have a pretty open-minded research
+      facility — as long as the subjects fall somewhere in the realm of science
+      and technology. You seem like an intelligent, dedicated researcher, and
+      just the kind of person we'd like to have on our team. Saying that, of the
+      ideas you submitted we were most intrigued by the following, in order of
+      priority:
+    </p>
 
-Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)
-Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)
-HTML and CSS constructs for representing musical scores.
+    <ol>
+      <li>
+        Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol
+        (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>)
+      </li>
+      <li>
+        Measuring the effect on performance of funk bass players at temperatures
+        exceeding 30°C (86°F), when the audience size exponentially increases
+        (effect of 3 × 10³ increasing to 3 × 10⁴)
+      </li>
+      <li>HTML and CSS constructs for representing musical scores</li>
+    </ol>
 
-So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.
+    <p>
+      So please provide more information on each of these subjects, including
+      how long you'd expect the research to take, required staff and other
+      resources, and anything else you think we'd need to know.
+    </p>
 
+    <h2>Exotic dance moves</h2>
 
-Exotic dance moves
+    <p>
+      Yes, you are right! As part of my post-doctorate work, I did study exotic
+      tribal dances. To answer your question, my favourite dances are as
+      follows:
+    </p>
 
-Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:
+    <dl>
+      <dt><strong>Polynesian chicken dance</strong></dt>
+      <dd>
+        A little known but very influential dance dating back as far as 300 BC,
+        where a whole village would dance around in a circle like chickens to
+        encourage their livestock to be "fruitful".
+      </dd>
 
-Polynesian chicken dance
-A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".
-Icelandic brownian shuffle
-Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.
-Arctic robot dance
-An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.
+      <dt><strong>Icelandic brownian shuffle</strong></dt>
+      <dd>
+        Before the Icelanders developed fire as a means of getting warm, they
+        used to practice this dance, which involved huddling close together on
+        the floor and shuffling their bodies around in tiny rapid movements.
+        Some say this inspired modern styles such as Twerking.
+      </dd>
 
-For more of my research, see my exotic dance research page.
+      <dt><strong>Arctic robot dance</strong></dt>
+      <dd>
+        English explorers in the 1960s believed they had discovered a new dance
+        style characterized by robotic, stilted movements practiced by Northern
+        Alaskans. Later it was revealed they were just really cold.
+      </dd>
+    </dl>
 
-Yours sincerely,
-Dr Eleanor Gaye
+    <p>For more of my research, see my exotic dance research page.</p>
 
-University of Awesome motto: "Be awesome to each other." -- The memoirs of Bill S Preston, Esq
-</body>
+    <div class="signature">
+      Yours sincerely,<br>
+      <strong>Dr Eleanor Gaye</strong>
+    </div>
+
+    <p>
+      <em
+        >University of Awesome motto: "Be awesome to each other." — The memoirs
+        of Bill S Preston, Esq</em
+      >
+    </p>
+
+  </body>
 </html>
